[package]
name = "pnpid"
description = "a tiny library to map PNP IDs with company/vendor names"
authors = ["Barrett Ray <contact@barretts.club>"]
version = "1.0.0"
repository = "https://github.com/onkoe/pnpid"
readme = "README.md"
license-file = "LICENSE"
keywords = ["pnp", "pnpid"]
categories = ["hardware-support", "no-std", "no-std::no-alloc"]
edition = "2021"

[build-dependencies]
csv = "1.3"
prettyplease = "0.2.25"
quote = "1.0.37"
serde = { version = "1.0.214", features = ["derive"] }
syn = { version = "2.0.87", default-features = false }
