[package]
name = "pnpid"
description = "a tiny library to map PNP IDs with company/vendor names"
authors = ["Barrett Ray <contact@barretts.club>"]
version = "1.0.1"
repository = "https://github.com/onkoe/pnpid"
readme = "README.md"
license = "MPL-2.0"
keywords = ["pnp", "pnpid"]
categories = ["hardware-support", "no-std", "no-std::no-alloc"]
edition = "2021"

[features]
default = ["array"]
## The library will include a list of tuples containing 
## `(company_id, company_name)`. 
##
## You may wish to keep this turned off to avoid bloating your binaries.
array = []

[build-dependencies]
csv = "1.3"
prettyplease = "0.2.25"
quote = "1.0.37"
serde = { version = "1.0.214", features = ["derive"] }
syn = { version = "2.0.87", default-features = false }
